<resources>
    <string name="app_name">InternalTimeSheet</string>
    <string name="entry_time">Hora de Entrada: </string>
    <string name="out_time">Hora de Saida: </string>
    <string name="general">Visão Geral</string>
    <string name="hour_bank">Banco de Horas</string>
    <string name="inicio_da_contagem">Inicio do Ciclo:</string>
    <string name="fim_da_contagem">Fim do Ciclo:</string>
    <string name="dias_restantes">Dias Restantes:</string>
    <string name="saldo_do_dia">Saldo do Dia:</string>
    <string name="informa_es_adicionais">Informações Adicionais</string>
    <string name="welcome">Criar uma conta</string>
    <string name="basic_information">Já possui uma conta? Clique aqui</string>
    <string name="name">Nome</string>
    <string name="start_interval">Inicio de Intervalo</string>
    <string name="end_interval">Fim de Intervalo</string>
    <string name="end_journey">Fim da Jornada</string>
    <string name="start">Vamos Lá!</string>
    <string name="data_cabecalho">Quinta-feira, 24 de maio de 2018</string>
    <string name="message_touchclock">Clique no relogio para registrar a jornada</string>
    <string name="hora_molde">00:00:00</string>
    <string name="no_name">Insira um Nome!</string>
    <string name="no_journey_init">Insira um dia para o inicio da jornada!</string>
    <string name="no_journey_end">Insira um dia para o final da jornada!</string>
    <string name="no_interval_init">Insira o horário de inicio da jornada!</string>
    <string name="no_interval_end">Insira o horário de fim da jornada!</string>
    <string name="login">Login</string>
    <string name="register">Cadastrar</string>
    <string name="start_journey">Inicio da Jornada</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="password2">Repetir Senha</string>
    <string name="next_step">Próxima Etapa</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="first_option">Informar horário de entrada e saída</string>
    <string name="first_option_title">Relógio Ponto</string>
    <string name="second_option_title">Perfil</string>
    <string name="second_option">Editar informações do usuário</string>
    <string name="third_option_title">Relatório</string>
    <string name="third_option">Extrair relatório mensal</string>
    <string name="login_title">Internal Time Sheet</string>
    <string name="email_error">Email não informado</string>
    <string name="email_error2">Email inválido</string>
    <string name="password_error">Senha não informada</string>
    <string name="password_error2">Senha diferente</string>
    <string name="back">Voltar</string>

</resources>
