<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.accera.internaltimesheet.DetailsActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="60sp"
        card_view:cardCornerRadius="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="10sp"
            android:text="@string/general"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="25sp"
            android:text="@string/entry_time"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/info_entry_time"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="50sp"
            android:text="@string/out_time"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/info_entry_time"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="75sp"
            android:text="@string/saldo_do_dia"
            android:textSize="14sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="280sp"
        android:layout_below="@id/card_actual"
        card_view:cardCornerRadius="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:text="@string/informa_es_adicionais"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="10sp"
            android:text="@string/inicio_da_contagem"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/info_entry_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="50sp"
            android:text="@string/fim_da_contagem"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/info_out_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/info_entry_time"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="70sp"
            android:text="@string/dias_restantes"
            android:textSize="14sp" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
