<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".DashboardActivity">

    <android.support.design.widget.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleTextAppearance="@android:color/transparent"
        android:fitsSystemWindows="true">

    </android.support.design.widget.CollapsingToolbarLayout>

    <com.joaquimley.faboptions.FabOptions
        android:id="@+id/fab_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_color="@color/fabOptionsFabColor"
        app:button_menu="@menu/your_fab_buttons"
        android:layout_gravity="center_horizontal|bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/info_hour_bank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="65sp"
            android:textColor="@color/white"
            android:layout_marginTop="40sp"
            android:text="@string/hour_bank"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginLeft="85sp"
            android:layout_marginTop="5sp"
            android:text="@string/hour_bank"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="-120sp"
        card_view:cardCornerRadius="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="10sp"
            android:text="@string/general"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="40sp"
            android:text="@string/entry_time"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/info_entry_time"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="70sp"
            android:text="@string/out_time"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/info_entry_time"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="100sp"
            android:text="@string/saldo_do_dia"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="160sp"
        android:layout_below="@id/card_actual"
        card_view:cardCornerRadius="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:text="@string/informa_es_adicionais"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45sp"
            android:layout_marginLeft="10sp"
            android:text="@string/inicio_da_contagem"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/info_entry_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="72sp"
            android:text="@string/fim_da_contagem"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/info_out_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/info_entry_time"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="100sp"
            android:text="@string/dias_restantes"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>



</android.support.design.widget.CoordinatorLayout>