<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="cadastro" type="br.com.accera.internaltimesheet.User" />
    </data>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="br.com.accera.internaltimesheet.ui.main.MainActivity">


    <LinearLayout
        android:paddingTop="20sp"
        android:id="@+id/start_app"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/info_hour_bank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="40sp"
            android:text="@string/welcome"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/start_app_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="5sp"
            android:textColorHint="@color/white"
            android:text="@string/basic_information"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:layout_constraintTop_toBottomOf="@id/start_app"
        android:layout_marginTop="20sp">

        <EditText
            android:id="@+id/name"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:text="@={cadastro.Nome}"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/start_journey"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Inicio da Jornada"
            android:inputType="text"
            android:text="@={cadastro.Diainit}"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/start_interval"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_interval"
            android:text="@={cadastro.Intervaloinit}"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/end_interval"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_interval"
            android:text="@={cadastro.Intervaloend}"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/end_journey"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={cadastro.Diaend}"
            android:hint="fim da jornada"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />

        <Button
            android:layout_marginTop="30sp"
            android:layout_width="230dp"
            android:id="@+id/start"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/start"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
</layout>