<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="reg"
            type="br.com.accera.internaltimesheet.User" />
    </data>

    <android.support.v7.widget.CardView
        android:id="@+id/register_card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={reg.user}"
                android:textColor="@color/mdtp_transparent_black"
                android:textColorHint="@color/mdtp_transparent_black" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={reg.pass}"
                android:textColor="@color/mdtp_transparent_black"
                android:textColorHint="@color/mdtp_transparent_black" />

            <EditText
                android:id="@+id/password_two"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:hint="@string/password2"
                android:inputType="text|textPassword"
                android:text="@={reg.pass2}"
                android:textColor="@color/mdtp_transparent_black"
                android:textColorHint="@color/mdtp_transparent_black" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</layout>