<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="reg"
            type="br.com.accera.internaltimesheet.User" />
    </data>

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/register_card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="text"
                android:text="@={reg.name}"
                android:textColor="@color/mdtp_transparent_black"
                android:textColorHint="@color/mdtp_transparent_black" />


            <EditText
                android:id="@+id/start_journey"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_below="@id/name"
                android:layout_marginTop="10sp"
                android:focusable="false"
                android:gravity="center"
                android:hint="Inicio da Jornada"
                android:inputType="text"
                android:text="@={reg.startJourney}"
                android:textColor="@color/mdtp_transparent_black"
                android:textColorHint="@color/mdtp_transparent_black" />

            <EditText
                android:id="@+id/start_interval"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_below="@id/start_journey"
                android:layout_marginTop="10sp"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/start_interval"
                android:inputType="text"
                android:text="@={reg.startInterval}"
                android:textColor="@color/mdtp_transparent_black"
                android:textColorHint="@color/mdtp_transparent_black"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="134dp" />

            <EditText
                android:id="@+id/end_interval"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_below="@id/start_interval"
                android:layout_marginTop="10sp"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/end_interval"
                android:inputType="text"
                android:text="@={reg.endInterval}"
                android:textColor="@color/mdtp_transparent_black"
                android:textColorHint="@color/mdtp_transparent_black" />

            <EditText
                android:id="@+id/end_journey"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_below="@id/end_interval"
                android:layout_marginTop="10sp"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/end_journey"
                android:inputType="text"
                android:text="@={reg.endJourney}"
                android:textColor="@color/mdtp_transparent_black"
                android:textColorHint="@color/mdtp_transparent_black"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="242dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
</layout>